# cogitantium

./: .gitignore  Cargo.toml  Procfile  README.md
src/: db_operations.rs  main.rs
static/scripts/: profile.js  reviews.js
static/styles/: main.css  main.css.map  main.scss  profile.css  profile.css.map  profile.scss  signin.css  signin.css.map  signin.scss
templates/: index.html.tera  layout.html.tera  profile.html.tera  reviews.html.tera  signin.html.tera  signup.html.tera
