[package]
name = "cogitantium"
version = "0.1.0"
authors = ["cubetastic <cubetastic33@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.1"
rand_hc = "0.1.0"
bcrypt = "0.13.0"
chrono = "0.4.6"
rocket = "0.4.0-rc.1"
rocket_contrib = {version = "0.4.0-rc.1", features = ["tera_templates"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
postgres = {version = "0.19", features = ["with-chrono-0_4"]}
dotenv = "0.15.0"
